# fp-event-rs

./: Cargo.toml  Makefile
src/: collector.rs  event.rs  lib.rs  recorder.rs
tests/: integration.rs
