[package]
edition = "2021"
name = "feature-probe-event"
version = "1.1.3"
description = "FeatureProbe Internal Event Recorder and Collector for Rust"
license = "Apache-2.0"
authors = ["maintain@featureprobe.com"]

[lib]
name = "feature_probe_event"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use_std"]
collector = ["axum"]
use_std = ["ureq"]
use_tokio = ["reqwest", "tokio"]

[dependencies]
headers = "0.3"
parking_lot = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2"

axum = { optional = true, version = "0.5", features = ["headers"] }
reqwest = { optional = true, version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { optional = true, version = "1", features = ["full"] }
ureq = { optional = true, version = "2.4" }

[dev-dependencies]
axum = { version = "0.5", features = ["headers"] }
axum-extra = { version = "0.2", features = ["typed-routing"] }
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rusty-hook = "^0.11.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
